cmake_minimum_required(VERSION 3.10)
project(libbno055-linux VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Source files
set(SOURCES
    src/bno055.cpp
)

# Header files
set(HEADERS
    include/libbno055-linux/bno055.hpp
)

# Add library
add_library(libbno055-linux SHARED ${SOURCES} ${HEADERS})

# Prevent duplicate "lib" prefix (e.g. liblibbno055-linux.so)
set_target_properties(libbno055-linux PROPERTIES PREFIX "")

# Include directories
target_include_directories(libbno055-linux
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

# Compiler flags
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    target_compile_options(libbno055-linux PRIVATE -Wall -Wextra -Wpedantic)
endif()

# Clang-Tidy static analysis integration
option(ENABLE_CLANG_TIDY "Enable clang-tidy static analysis" ON)
if(ENABLE_CLANG_TIDY)
    find_program(CLANG_TIDY_EXE NAMES "clang-tidy")
    if(CLANG_TIDY_EXE)
        set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE}")
        message(STATUS "clang-tidy enabled: ${CLANG_TIDY_EXE}")
    else()
        message(WARNING "clang-tidy not found, static analysis disabled.")
    endif()
endif()

# Dependencies
find_package(Threads REQUIRED)
target_link_libraries(libbno055-linux PRIVATE Threads::Threads)

# Example executables
add_executable(calibrate_imu examples/calibrate.cpp)
target_link_libraries(calibrate_imu PRIVATE libbno055-linux)

add_executable(read_data_noexcept examples/read_data_noexcept.cpp)
target_link_libraries(read_data_noexcept PRIVATE libbno055-linux)

add_executable(read_all_data examples/read_all_data.cpp)
target_link_libraries(read_all_data PRIVATE libbno055-linux)

# Installation definitions
include(CMakePackageConfigHelpers)
include(GNUInstallDirs)

# Install targets
install(TARGETS libbno055-linux
    EXPORT libbno055-linuxTargets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(TARGETS calibrate_imu read_data_noexcept read_all_data
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

# Install headers
install(DIRECTORY include/libbno055-linux
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

# Export targets
install(EXPORT libbno055-linuxTargets
    FILE libbno055-linuxTargets.cmake
    NAMESPACE libbno055-linux::
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/libbno055-linux
)

# Configure config file
configure_package_config_file(
    cmake/libbno055-linuxConfig.cmake.in
    ${CMAKE_CURRENT_BINARY_DIR}/libbno055-linuxConfig.cmake
    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/libbno055-linux
)

# Write version file
write_basic_package_version_file(
    ${CMAKE_CURRENT_BINARY_DIR}/libbno055-linuxConfigVersion.cmake
    VERSION ${PROJECT_VERSION}
    COMPATIBILITY AnyNewerVersion
)

# Install config files
install(FILES
    ${CMAKE_CURRENT_BINARY_DIR}/libbno055-linuxConfig.cmake
    ${CMAKE_CURRENT_BINARY_DIR}/libbno055-linuxConfigVersion.cmake
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/libbno055-linux
)

# Testing
option(BUILD_TESTING "Build unit tests" ON)
if(BUILD_TESTING)
    include(FetchContent)
    FetchContent_Declare(
      googletest
      GIT_REPOSITORY https://github.com/google/googletest.git
      GIT_TAG        release-1.12.1
    )
    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(googletest)

    enable_testing()

    add_executable(libbno055-linux_tests
        tests/test_bno055.cpp
    )
    target_link_libraries(libbno055-linux_tests
        PRIVATE
            libbno055-linux
            gtest_main
    )
    include(GoogleTest)
    gtest_discover_tests(libbno055-linux_tests)
endif()
