<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libbno055_linux</name>
  <version>1.7.1</version>
  <description>High-performance, polyglot C++17, ROS 2, Python, C, and Rust driver for Bosch BNO055 IMU on Linux.</description>
  <maintainer email="lazytatzv@users.noreply.github.com">lazytatzv</maintainer>
  <license file="LICENSE">MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
